--- a/css/resume.css
+++ b/css/resume.css
@@ -3,8 +3,8 @@
 
 body, html {
   height: 100%;
-  /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
-  font: 16px 'Open Sans', sans-serif;
+  font-family:'Open Sans', sans-serif;
+  font-size: 1em; /* 16 / 16 = 1.25em */
 }
 
 
@@ -41,20 +41,20 @@ header .active {
 p {
 	font-size: 1em;
 	line-height: 1.4em;
-	margin-bottom: 20px;
+	margin-bottom: 1.25em;
 	color: #444;
 }
 
 #cv {
 	width: 90%;
-	max-width: 800px;
+	max-width: 50em;
 	background: #f3f3f3;
-	margin: 30px auto;
+	margin: 1.875em auto;
 }
 
 .mainDetails {
-	padding: 25px 35px;
-	border-bottom: 2px solid #f5a09b;
+	padding: 1.5625em 2.1875em;
+	border-bottom: 0.125em solid #f5a09b;
 	background: #ededed;
 }
 
@@ -62,16 +62,16 @@ p {
 	font-size: 2.5em;
 	font-weight: 500;
   color: #f5a09b;
-	margin-bottom: -6px;
+	margin-bottom: -0.375em;
 }
 
 #name h2 {
 	font-size: 2em;
-	margin-left: 2px;
+	margin-left: 0.125em;
 }
 
 #mainArea {
-	padding: 0 40px;
+	padding: 0 2.5em;
 }
 
 #name {
@@ -85,11 +85,11 @@ p {
 #contactDetails ul {
 	list-style-type: none;
 	font-size: 0.9em;
-	margin-top: 2px;
+	margin-top: 0.125em;
 }
 
 #contactDetails ul li {
-	margin-bottom: 3px;
+	margin-bottom: 0.1875em;
 	color: #444;
 }
 
@@ -105,7 +105,7 @@ p {
 
 section {
 	border-top: 1px solid #dedede;
-	padding: 20px 0 0;
+	padding: 1.25em 0 0;
 }
 
 section:first-child {
@@ -113,7 +113,7 @@ section:first-child {
 }
 
 section:last-child {
-	padding: 20px 0 10px;
+	padding: 1.25em 0 0.625em;
 }
 
 .sectionTitle {
@@ -134,13 +134,13 @@ section:last-child {
 
 .sectionContent h2 {
 	font-size: 1.5em;
-	margin-bottom: -2px;
+	margin-bottom: -0.125em;
 }
 
 .subDetails {
 	font-size: 0.8em;
 	font-style: italic;
-	margin-bottom: 3px;
+	margin-bottom: 0.1875em;
 }
 
 .keySkills {
@@ -148,13 +148,13 @@ section:last-child {
 	-moz-column-count:3;
 	-webkit-column-count:3;
 	column-count:3;
-	margin-bottom: 20px;
+	margin-bottom: 1.25em;
 	font-size: 1em;
 	color: #444;
 }
 
 .keySkills ul li {
-	margin-bottom: 3px;
+	margin-bottom: 0.1875em;
 }
 
 .copy {
@@ -186,8 +186,8 @@ section:last-child {
 @media all and (max-width: 601px) {
 	#cv {
 		width: 95%;
-		margin: 10px auto;
-		min-width: 280px;
+		margin: 0.625em auto;
+		min-width: 17.5em;
 	}
 	
 	#headshot {
@@ -206,7 +206,7 @@ section:last-child {
 	}
 	
 	.sectionTitle {
-		margin-left: -2px;
+		margin-left: -0.125em;
 		font-size: 1.25em;
 	}
 	
@@ -219,21 +219,21 @@ section:last-child {
 
 @media all and (max-width: 480px) {
 	.mainDetails {
-		padding: 15px 15px;
+		padding: 0.9375em 0.9375em;
 	}
 	
 	section {
-		padding: 15px 0 0;
+		padding: 0.9375em 0 0;
 	}
 	
 	#mainArea {
-		padding: 0 25px;
+		padding: 0 1.5625em;
 	}
 
 	
 	#name h1 {
 		line-height: .8em;
-		margin-bottom: 4px;
+		margin-bottom: 0.25em;
 	}
 }
 
