--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 
 body, html {
   height: 100%;
-  /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
-  font: 16px 'Open Sans', sans-serif;
+  font-family:'Open Sans', sans-serif;
+  font-size: 1em; /* 16 / 16 = 1.25em */
 }
 
 h1 {
@@ -42,7 +42,7 @@ header li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0.875em 1em;
     text-decoration: none;
 }
 
@@ -349,13 +349,12 @@ article section.parallax {
   }
 }
 
-
 /*----------------------*/
 /*-----Gallery Page-----*/
 /*----------------------*/
 .gallery-h1 {
-  margin: 40px 0;
-  font-size: 30px;
+  margin: 2.5em 0;
+  font-size: 1.875em;
   font-weight: 300;
   text-align: center;
 }
@@ -365,22 +364,22 @@ article section.parallax {
 }
 
 .gallery {
-  width: 760px;
-  margin: 0 auto 50px auto;
-  padding: 5px;
+  width: 47.5em;
+  margin: 0 auto 3.125em auto;
+  padding: 0.3125em;
   background: #fff;
-  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+  box-shadow: 0 0.0625em 0.125em rgba(0,0,0,.3);
 }
 
 .gallery > div {
   position: relative;
   float: left;
-  padding: 35px;
+  padding: 2.1875em;
 }
 
 .gallery > div > img {
   display: block;
-  width: 310px;
+  width: 19.375em;
   transition: .1s transform;
   transform: translateZ(0); /* hack */
 }
@@ -407,41 +406,17 @@ article section.parallax {
 /*Meida Query*/
 @media screen and (max-width: 625px) {
   .gallery-h1 {
-    margin: 20px 0;
-    font-size: 20px;
+    margin: 1.25em 0;
+    font-size: 1.25em;
   }
   .gallery {
-    width: 310px;
+    width: 19.375em;
     margin: 0 auto 0 auto;
     background:none;
     box-shadow:none;
   }
   .gallery > div {
-    margin-bottom: 25px;
+    margin-bottom: 1.5625em;
     padding: 0;
   }
 }
-/*@media screen and (max-width: 720px) {
-  .gallery-h1 {
-    margin: 20px 0;
-    font-size: 25px;
-  }
-  .gallery {
-    width: 620px;
-    margin: 0 auto 0 auto;
-    background:none;
-    box-shadow:none;
-  }
-  .gallery > div {
-    margin-bottom: 25px;
-    padding: 0;
-  }
-  .gallery > div > img {
-    padding: 20px;
-    width: 270px;
-  }
-}*/
-
-/*----------------*/
-/*Resume Page-----*/
-/*----------------*/
